# homer

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  homer-report.html  homer-risk.json
.beads/: issues.jsonl  metadata.json
.cargo/: config.toml
.claude/skills/: homer-modify-docs-files.md  homer-modify-homer-cli-files.md  homer-modify-homer-cli-src-commands-files.md  homer-modify-homer-cli-src-files.md  homer-modify-homer-core-benches-files.md  homer-modify-homer-core-files.md  homer-modify-homer-core-src-analyze-files.md  homer-modify-homer-core-src-extract-files.md  homer-modify-homer-core-src-files.md  homer-modify-homer-core-src-llm-files.md  homer-modify-homer-core-src-query-files.md  homer-modify-homer-core-src-render-files.md  homer-modify-homer-core-src-store-files.md  homer-modify-homer-graphs-files.md  homer-modify-homer-graphs-src-files.md  homer-modify-homer-graphs-src-languages-files.md  homer-modify-homer-mcp-files.md  homer-modify-homer-mcp-src-files.md  homer-modify-homer-spec-files.md  homer-modify-homer-test-files.md  homer-modify-homer-test-src-files.md  homer-modify-homer-test-tests-files.md  homer-modify-spec-files.md
.github/workflows/: ci.yml  release.yml
.homer/: config.toml
docs/: allocation-strategy.md  cli-reference.md  compatibility.md  concepts.md  configuration.md  cookbook.md  csr-evaluation.md  extending.md  getting-started.md  internals.md  mcp-integration.md  performance-regression.md  rollout-notes.md  troubleshooting.md
docs/adr/: 0001-canonical-contracts.md  0002-deterministic-hyperedge-identity.md  0003-mcp-transport-stdio-only.md
docs/verification/: 2026-02-20-remediation-gates.md
homer-cli/: Cargo.toml  README.md
homer-cli/src/: .context.md  main.rs
homer-cli/src/commands/: .context.md  diff.rs  graph.rs  init.rs  mod.rs  query.rs  render.rs  risk_check.rs  serve.rs  snapshot.rs  status.rs  update.rs
homer-core/: Cargo.toml  README.md
homer-core/benches/: .context.md  centrality_bench.rs  community_bench.rs  parse_bench.rs  scope_graph_bench.rs  store_bench.rs
homer-core/proptest-regressions/analyze/: community.txt
homer-core/proptest-regressions/store/: sqlite.txt
homer-core/src/: .context.md  config.rs  contracts.rs  error.rs  lib.rs  pipeline.rs  progress.rs  types.rs
homer-core/src/analyze/: .context.md  behavioral.rs  centrality.rs  community.rs  convention.rs  mod.rs  semantic.rs  task_pattern.rs  temporal.rs  traits.rs
homer-core/src/extract/: .context.md  document.rs  forge_common.rs  git.rs  github.rs  gitlab.rs  graph.rs  mod.rs  prompt.rs  structure.rs  traits.rs
homer-core/src/llm/: .context.md  cache.rs  mod.rs  providers.rs
homer-core/src/query/: .context.md  mod.rs
homer-core/src/render/: .context.md  agents_md.rs  mod.rs  module_context.rs  report.rs  risk_map.rs  skills.rs  topos_spec.rs  traits.rs
homer-core/src/store/: .context.md  incremental.rs  mod.rs  schema.rs  sqlite.rs  traits.rs
homer-core/tests/: .context.md  perf_regression.rs
homer-graphs/: Cargo.toml  README.md
homer-graphs/src/: .context.md  call_graph.rs  diff.rs  import_graph.rs  lib.rs  scope_graph.rs
homer-graphs/src/languages/: .context.md  csharp.rs  ecma_scope.rs  fallback.rs  go.rs  helpers.rs  java.rs  javascript.rs  kotlin.rs  lean.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  swift.rs  typescript.rs  zig.rs
homer-mcp/: Cargo.toml  README.md
homer-mcp/src/: .context.md  lib.rs
homer-spec/: ANALYZERS.md  ARCHITECTURE.md  CLI.md  EVOLUTION.md  EXTRACTORS.md  GRAPH_ENGINE.md  INTEGRATIONS.md  PERFORMANCE.md  README.md  REFERENCES.md  RENDERERS.md  STORE.md
homer-test/: Cargo.toml  README.md
homer-test/src/: .context.md  lib.rs
homer-test/tests/: .context.md  pipeline.rs
scripts/: perf-regression.sh  pgo-build.sh
spec/: homer-spec.tps
