[workspace]
resolver = "2"
members = [
    "homer-core",
    "homer-graphs",
    "homer-cli",
    "homer-mcp",
    "homer-test",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/rand/homer"

[workspace.dependencies]
# Internal crates
homer-core = { path = "homer-core" }
homer-graphs = { path = "homer-graphs" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled", "vtab", "backup"] }

# Git
gix = { version = "0.79", default-features = false, features = [
    "max-performance-safe",
    "basic",
    "comfort",
] }

# Tree-sitter
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"

# Graph algorithms
petgraph = "0.7"

# CLI
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"

# MCP
rmcp = { version = "0.15", features = ["server"] }
schemars = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
rayon = "1"
similar = "2"

# Testing
insta = { version = "1", features = ["json", "yaml"] }
proptest = "1"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common pedantic false positives
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
