[package]
name = "homer-test"
description = "Integration tests and test fixtures for Homer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
homer-core = { workspace = true }
homer-graphs = { workspace = true }

tempfile = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
